fixed navbar in different resolution, added collapse on sm

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,6 @@
 	padding:0px 10px 10px 10px;
 }
 
-
 .container-box {
     background-image: url("../images/food3.jpg");
     width: 100%;
@@ -102,6 +101,10 @@
 .list-group-item {
 	float:left;
 	width:100%;
+}
+
+.navbar-brand{
+	font-size: 200%;
 }
 
 /*Codice CSS per regolare lo stile della pagina del profilo di un utente */
